force-app/main/default/objects/ApplicationClassifications__c/ApplicationClassifications__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Application Classifications</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>Application Classification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>