force-app/main/default/objects/ApplicationClassifications__c/fields/ClassAddedPostLicense__c.field-meta.xml
<CustomField>
    <fullName>ClassAddedPostLicense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV082819 - Created for PVL phase 1</description>
    <label>Class Added Post-License</label>
    <type>Checkbox</type>
</CustomField>