force-app/main/default/objects/ApplicationClassifications__c/fields/ClassesIncluded__c.field-meta.xml
<CustomField>
    <fullName>ClassesIncluded__c</fullName>
    <description>PacPoint-KN110519-Created for PVL Sprint 2 Phase 1</description>
    <formula>Classification__r.ClassesIncluded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classes Included</label>
    <type>Text</type>
</CustomField>