force-app/main/default/objects/ApplicationClassifications__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Classification</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.LicenseType__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.LicenseType__c</field>
            <operation>equals</operation>
            <valueField>Classification__c.LicenseType__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Classification__c</referenceTo>
    <relationshipLabel>Application Classifications</relationshipLabel>
    <relationshipName>Application_Classifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>