force-app/main/default/objects/ApplicationClassifications__c/fields/ClassificationName1__c.field-meta.xml
<CustomField>
    <fullName>ClassificationName1__c</fullName>
    <formula>IF(

ClassificationName__c = &apos;A General Engineering&apos; || ClassificationName__c = &apos;B General Building&apos;

,


ClassificationName__c

,

ClassificationName__c + &quot; - &quot; + Classification__r.Description__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Name</label>
    <type>Text</type>
</CustomField>