force-app/main/default/objects/ApplicationClassifications__c/fields/ClassificationName__c.field-meta.xml
<CustomField>
    <fullName>ClassificationName__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <formula>Classification__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Name</label>
    <type>Text</type>
</CustomField>