force-app/main/default/objects/ApplicationClassifications__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>