force-app/main/default/objects/ApplicationClassifications__c/fields/CompleteClassExamBy__c.field-meta.xml
<CustomField>
    <fullName>CompleteClassExamBy__c</fullName>
    <label>Complete Class Exam By</label>
    <type>Date</type>
</CustomField>