force-app/main/default/objects/ApplicationClassifications__c/fields/LicenseType__c.field-meta.xml
<CustomField>
    <fullName>LicenseType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Type</label>
    <referenceTo>LicenseType__c</referenceTo>
    <relationshipLabel>Application Classifications</relationshipLabel>
    <relationshipName>Application_Classifications</relationshipName>
    <type>Lookup</type>
</CustomField>