force-app/main/default/objects/ApplicationClassifications__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CW - Class Withdrawn by Applicant</fullName>
            </value>
            <value>
                <fullName>H - Class Deferred by Board</fullName>
            </value>
            <value>
                <fullName>HC - Application Completed</fullName>
            </value>
            <value>
                <fullName>NE - No Exam Required--Class to be Licensed</fullName>
            </value>
            <value>
                <fullName>P - Passed Exam--Class to be Licensed</fullName>
            </value>
            <value>
                <fullName>U - Class No Longer Needed Due To Upgrade To Higher Class</fullName>
            </value>
            <value>
                <fullName>W - Awaiting Approval/Exam</fullName>
            </value>
            <value>
                <fullName>NA - No Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>